--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.1
   flutter_riverpod: ^2.6.1
+  firebase_storage: ^12.3.7
 
 dev_dependencies:
   flutter_test:
