--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.8.1
   flutter_riverpod: ^2.6.1
   cloud_firestore: ^5.5.1
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
