--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   cloud_firestore: ^5.5.1
   dio: ^5.7.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
