--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   firebase_storage: ^12.3.7
   cloud_firestore: ^5.5.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
