--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,7 +18,9 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.1.0" apply false
+    //id "com.android.application" version "8.1.0" apply false
+    id "com.android.application" version "8.2.1" apply false//위 주석 버전에서 해당 버전으로 수정241214
+    id 'com.android.library' version '8.2.1' apply false //추가_241214
     // START: FlutterFire Configuration
     id "com.google.gms.google-services" version "4.3.15" apply false
     // END: FlutterFire Configuration
