--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>앱 사용 중 위치 정보를 사용합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진 업로드를 위한 라이브러리 권한을 허용해 주세요</string>
 	<key>CFBundleDevelopmentRegion</key>
