--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_storage: ^12.3.7
   cloud_firestore: ^5.5.1
   image_picker: ^1.1.2
+  geolocator: ^13.0.2
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
